uplift: make uplift endpoint work for a single revision (Bug 1764213)
Remove code related to "approval requests" from the uplift endpoint.
Change the incorrect `commit` key on the diff to the correct
`rev` key to fix the endpoint. Add some type hints to various pieces
of code.
