# landoapi/spec/swagger.yml
@@ -377,20 +377,18 @@ paths:
         - name: data
           in: body
           description: |
-            Retrieve status of the landing job
+            Provide information about which revision to uplift and which repository
+            the uplift will land in.
           required: true
           schema:
             type: object
             required:
               - revision_id
               - repository
-              - form_content
             properties:
               revision_id:
                 type: integer
               repository:
-                type: string
-              form_content:
                 type: string
       responses:
         201:
